--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -171,6 +171,15 @@ header
       margin-left 0.05em
       margin-right 0.05em
 
+section > nav
+  & button, &.button
+    font-weight bold
+    font-style normal
+    text-decoration none
+    text-align center
+    background-color rgba(0, 0, 0, 0)
+    background-image none
+
 footer
 
   & .icon:before
