--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -5,7 +5,11 @@ section
   padding 0
   z-index 0
   opacity 0
-  position fixed
+  position absolute
+  top 0
+  bottom 0
+  left 0
+  right 0
 
   display -webkit-box
   display -ms-box
@@ -23,17 +27,18 @@ section
     opacity 1
     z-index SECTION_INDEX
 
-  &:not(.active) > article
-    display none
-
-  &.no_header > article
+  &.no_header article
     top 0
 
-  &.extended_header > article
+  &.extended_header article
     margin-top HEADER_HEIGHT
 
-  &.footer > article
+  &.footer article
     margin-bottom 0
+
+  & > section
+    position relative
+    opacity 1
 
   &.asided
     & header
@@ -116,36 +121,35 @@ section
         & > button
           margin-left 5px
 
-      &:not(.right)
-        &:not(.left)
-          position relative
-          top HEADER_HEIGHT
-          font-size 1.2em
-          width 100%
-          line-height HEADER_HEIGHT
-          padding 0
-          display -webkit-box
-          display -ms-box
-          display -moz-box
-          display -o-box
-          display box
-          box-orient horizontal
-          box-direction normal
-          box-pack justify
-          box-align stretch
+section > nav
+  box-flex 0
+  font-size 1.2em
+  width 100%
+  line-height HEADER_HEIGHT
+  padding 0
+  display -webkit-box
+  display -ms-box
+  display -moz-box
+  display -o-box
+  display box
+  box-orient horizontal
+  box-direction normal
+  box-pack justify
+  box-align stretch
 
-          & > *
-            box-flex 1
-            text-align center
-            width 100%
-            display block
-            height HEADER_HEIGHT
-            font-size 1em!important
-            margin-top 0!important
-            transition-duration 200ms
+  & > *
+    box-flex 1
+    text-align center
+    width 100%
+    display block
+    height HEADER_HEIGHT
+    line-height HEADER_HEIGHT
+    font-size 1em!important
+    margin-top 0!important
+    transition-duration 200ms
 
-          & .icon
-            font-size 1em
+  & .icon
+    font-size 1em
 
 footer
   position relative
