--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -139,7 +139,7 @@ section > nav
     margin-top 0!important
     transition-duration 200ms
 
-  & .icon
+  & .icon, & .icon:before
     font-size 1em
 
 footer
