--- a/stylesheets/Tako.aside.styl
+++ b/stylesheets/Tako.aside.styl
@@ -11,11 +11,10 @@ aside
 
   & .counter
     margin-top -3px
-    -webkit-border-radius 2px
-    -moz-border-radius 2px
-    border-radius 2px
-    padding .2em .4em .2em .4em
+    border-radius(2px)
+    padding 0 .4em 0 .3em
     float right
+    font-size .7em
 
   &.show
     transform(translateX(ASIDE_WIDTH + 8 + ASIDE_PADDING * 2))
