--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -138,7 +138,7 @@ header
       -webkit-border-radius 2px
       -moz-border-radius 2px
       border-radius 4px
-      padding 0.1em 0.2em 0.1em 0.2em
+      padding 0.1em 0.2em 0.2em 0.3em
       font-size FONT_SIZE_SMALLEST
 
     &>span.icon
@@ -199,7 +199,7 @@ footer
       -moz-border-radius 4px
       border-radius 4px
       padding .2em .5em .2em .5em
-      font-size FONT_SIZE_SMALL
+      font-size FONT_SIZE_SMALLEST
 
 article
   & button, & .button
