--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -15,6 +15,12 @@ body, html
   -moz-user-select none
   -ms-user-select none
   user-select none
+  position absolute
+
+  top 0
+  bottom 0
+  left 0
+  right 0
 
   -webkit-backface-visibility hidden
 
