Section <> Article and fixed flexbox

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -149,6 +149,6 @@ small
 
 // Overthrow
 .overthrow-enabled
-  & .scroll, & article
+  & .scroll, & section, & aside
     overflow auto
     -webkit-overflow-scrolling touch
