--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -171,7 +171,7 @@ header
       margin-left 0.05em
       margin-right 0.05em
 
-section > nav
+article > nav
   & button, &.button
     font-weight bold
     font-style normal
@@ -201,7 +201,7 @@ footer
       padding .2em .5em .2em .5em
       font-size FONT_SIZE_SMALLEST
 
-article
+section
   & button, & .button
     padding-top 2px
     padding-bottom 3px
