Fixings for android keyboard

--- a/stylesheets/TaKo.article.styl
+++ b/stylesheets/TaKo.article.styl
@@ -181,6 +181,7 @@ footer
         background-color rgba(250,250,250,0.15)
 
 section
+  position relative
   width 100%
   display none
   margin 0
@@ -197,4 +198,8 @@ section
 
   &.active
     display block
+
+  & > div
+    position absolute
+
 
