More fixings for android keyboard and IOS

--- a/stylesheets/TaKo.article.styl
+++ b/stylesheets/TaKo.article.styl
@@ -199,7 +199,13 @@ section
   &.active
     display block
 
-  & > div
+  & > div:not(.pulltorefresh)
     position absolute
+    width 100%
+    box-sizing border-box
+
+  &:not(.indented) > div:not(.pulltorefresh)
+    height 100%
+
 
 
