--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -111,7 +111,8 @@
         position static
 
   section
-    flexbox-weight(1)
+    box-flex 1
+    flex 1 9999999 auto
     flexbox-order(2)
 
   footer
