--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -85,7 +85,8 @@ footer nav > *.active{background-color:rgba(250,250,250,0.15)}
 section{position:relative;width:100%;display:none;margin:0;overflow-x:hidden;overflow-y:scroll;-webkit-overflow-scrolling:touch;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-flex:1 9999999 auto;-moz-flex:1 9999999 auto;-ms-flex:1 9999999 auto;-o-flex:1 9999999 auto;flex:1 9999999 auto;-webkit-order:3;-moz-order:3;-ms-order:3;-o-order:3;order:3;-webkit-box-ordinal-group:3;-moz-box-ordinal-group:3;-ms-box-ordinal-group:3;-o-box-ordinal-group:3;box-ordinal-group:3;-ms-flex-order:3;}
 section.horizontal{width:auto;min-width:100%}
 section.active{display:block}
-section > div{position:absolute}
+section > div:not(.pulltorefresh){position:absolute;width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
+section:not(.indented) > div:not(.pulltorefresh){height:100%}
 
 section ul{list-style:none;width:100%;padding:0;margin:0;}
 section ul > li{position:relative;background-color:#fff;border-bottom:1px solid rgba(0,0,0,0.1);padding:.9em;}
@@ -693,7 +694,7 @@ article header > nav.right > button{margin-right:5px}
 article header > nav.left{position:relative;z-index:103;float:left;}
 article header > nav.left > button{margin-left:5px}
 article header > nav button,article header > nav .button{position:static}
-section{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-flex:1 1 auto;-moz-flex:1 1 auto;-ms-flex:1 1 auto;-o-flex:1 1 auto;flex:1 1 auto;-webkit-order:2;-moz-order:2;-ms-order:2;-o-order:2;order:2;-webkit-box-ordinal-group:2;-moz-box-ordinal-group:2;-ms-box-ordinal-group:2;-o-box-ordinal-group:2;box-ordinal-group:2;-ms-flex-order:2}
+section{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-flex:1 9999999 auto;-moz-flex:1 9999999 auto;-ms-flex:1 9999999 auto;-o-flex:1 9999999 auto;flex:1 9999999 auto;-webkit-order:2;-moz-order:2;-ms-order:2;-o-order:2;order:2;-webkit-box-ordinal-group:2;-moz-box-ordinal-group:2;-ms-box-ordinal-group:2;-o-box-ordinal-group:2;box-ordinal-group:2;-ms-flex-order:2}
 footer{position:relative;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;-webkit-flex:0 1 auto;-moz-flex:0 1 auto;-ms-flex:0 1 auto;-o-flex:0 1 auto;flex:0 1 auto;-webkit-order:3;-moz-order:3;-ms-order:3;-o-order:3;order:3;-webkit-box-ordinal-group:3;-moz-box-ordinal-group:3;-ms-box-ordinal-group:3;-o-box-ordinal-group:3;box-ordinal-group:3;-ms-flex-order:3}
 [data-action=aside]{display:none !important}
 }
