--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -128,7 +128,7 @@ aside li, footer button
   &:active, &:hover
     background-color SECONDARY_ACTIVE
 
-div[data-element="notification"] > div > section.window
+div[data-element="notification"] > div > article.window
 
 
   & .icon
