--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -1,4 +1,4 @@
-BLUE    = #3576be
+BLUE    = #1f4dbb
 RED     = #d10400
 YELLOW  = #f0d31e
 BLACK   = #000000
@@ -14,19 +14,19 @@ FIREFOX = #FF6600
 .blue
   color #FFF !important
   background-color BLUE!important
-  background-image -webkit-linear-gradient(lighten(BLUE, 30%), BLUE)!important
-  background-image -moz-linear-gradient(lighten(BLUE, 30%), BLUE)!important
-  background-image -ms-linear-gradient(lighten(BLUE, 30%), BLUE)!important
-  background-image -o-linear-gradient(lighten(BLUE, 30%), BLUE)!important
-  background-image linear-gradient(lighten(BLUE, 30%), BLUE)!important
+  background-image -webkit-linear-gradient(lighten(BLUE, 35%), BLUE)!important
+  background-image -moz-linear-gradient(lighten(BLUE, 35%), BLUE)!important
+  background-image -ms-linear-gradient(lighten(BLUE, 35%), BLUE)!important
+  background-image -o-linear-gradient(lighten(BLUE, 35%), BLUE)!important
+  background-image linear-gradient(lighten(BLUE, 35%), BLUE)!important
 .red
   color #FFF !important
   background-color RED!important
-  background-image -webkit-linear-gradient(lighten(RED, 15%), RED)!important
-  background-image -moz-linear-gradient(lighten(RED, 15%), RED)!important
-  background-image -ms-linear-gradient(lighten(RED, 15%), RED)!important
-  background-image -o-linear-gradient(lighten(RED, 15%), RED)!important
-  background-image linear-gradient(lighten(RED, 15%), RED)!important
+  background-image -webkit-linear-gradient(lighten(RED, 40%), RED)!important
+  background-image -moz-linear-gradient(lighten(RED, 40%), RED)!important
+  background-image -ms-linear-gradient(lighten(RED, 40%), RED)!important
+  background-image -o-linear-gradient(lighten(RED, 40%), RED)!important
+  background-image linear-gradient(lighten(RED, 40%), RED)!important
 .yellow
   color #000 !important
   background-color YELLOW!important
