--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -18,6 +18,9 @@ button, .button
   &:active
     box-shadow inset 0 0 5em rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2)!important
 
+  &:focus
+    outline none
+
   &.smallest
     line-height 2em
 
