Fixed section divs

--- a/stylesheets/TaKo.article.styl
+++ b/stylesheets/TaKo.article.styl
@@ -199,13 +199,9 @@ section
   &.active
     display block
 
-  & > div:not(.pulltorefresh)
-    position absolute
+  &.indented > div:not(.pulltorefresh)
     width 100%
     box-sizing border-box
-
-  &:not(.indented) > div:not(.pulltorefresh)
     height 100%
-
 
 
