--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -76,7 +76,7 @@ section ul
 
           &.switch
             margin-top -0.4em
-    & .icon
+    & .icon:before
       display inline-block
       float left
       margin-right .4em
