--- a/stylesheets/TaKo.icons.styl
+++ b/stylesheets/TaKo.icons.styl
@@ -112,11 +112,11 @@
     &:before
       content '\e805'
 
-  &.cancel
+  &.deny
     &:before
       content '\e806'
 
-  &.cancel-circled
+  &.deny-circled
     &:before
       content '\e807'
 
