--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -103,23 +103,23 @@ button, .button
   background-image linear-gradient(lighten(THEME, 35%), THEME)
   color SECONDARY_TEXT
 
-  &.accept
-    background-color lighten(SUCCESS, 15%)!important
-    background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
-    background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
-    background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
-    background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
-    background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
-    color #FFF
+.accept
+  background-color lighten(SUCCESS, 15%)!important
+  background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+  background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+  background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+  background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+  background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+  color #FFF
 
-  &.cancel
-    background-color lighten(FAIL, 15%)!important
-    background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)!important
-    background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)!important
-    background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)!important
-    background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)!important
-    background-image linear-gradient(lighten(FAIL, 15%), FAIL)!important
-    color #FFF
+.cancel
+  background-color lighten(FAIL, 15%)!important
+  background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+  background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+  background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+  background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+  background-image linear-gradient(lighten(FAIL, 15%), FAIL)!important
+  color #FFF
 
 aside .current, footer .current
   background-color SECONDARY_ACTIVE
