--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -87,6 +87,7 @@ input
     border-width 1px
     border-style solid
     margin-left 0
+    float none
 
     &::-moz-range-track
       width 100%
@@ -133,6 +134,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
   &.no_border
     border-color rgba(0,0,0,0)!important
+    background-size 0
 
   &.no_background
     background-color rgba(0,0,0,0)
