Fixings for firefox os select box

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -190,6 +190,8 @@ label.select
   display inline-block
   width 100%
 
+body:not([data-os=firefoxos]) label.select
+
   &:before
     content ''
     right 2px
