Fixed switch for iOS

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -37,6 +37,7 @@ input
         border-radius 1px
 
     &.switch
+      border-radius 0
       border-width 1px
       border-style solid
       appearance none
