--- a/stylesheets/Tako.navigator.styl
+++ b/stylesheets/Tako.navigator.styl
@@ -4,6 +4,12 @@ body[data-os=android]
   & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox]
     display none
 
+
+body[data-version="2.3"]
+  & article section
+    & input[type="text"], & input[type="password"], & input[type="date"], & input[type="datetime"], & input[type="email"], & input[type="number"], & input[type="search"], & input[type="tel"], & input[type="time"], & input[type="url"], & label > select, & textarea
+      -webkit-user-modify read-write-plaintext-only
+
 body[data-os=ios]
   & [data-os=android], & [data-os=firefoxos]
     display none
