Inputs for android 2.3 improvements

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -10,6 +10,11 @@ label:not(.select)
   margin-top 5px
   float left
 
+label.input
+  display block
+  width 100%
+  min-height 35px
+
 input
   outline none
   -webkit-user-select text
@@ -121,6 +126,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
   -webkit-appearance none
   -moz-appearance none
   appearance none
+  -webkit-transform translate3d(0,0,0)
   display inline-block
   box-sizing border-box
   width 100%
