Improved border-box

--- a/stylesheets/TaKo.article.styl
+++ b/stylesheets/TaKo.article.styl
@@ -201,7 +201,7 @@ section
 
   &.indented > div:not(.pulltorefresh)
     width 100%
-    box-sizing border-box
+    box-sizing(border-box)
     height 100%
 
 
