--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -311,7 +311,7 @@ div[data-element="notification"]
         position static
         display block
         padding 10px
-        box-sizing border-box
+        box-sizing(border-box)
 
         & .close
           position relative
