--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -46,7 +46,7 @@
     z-index FULL_ASIDE_INDEX
     position static
     padding-right ASIDE_PADDING
-    box-sizing border-box
+    box-sizing(border-box)
     box-flex 0
     flex 0 0 auto
     flexbox-order(1)
