--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -86,6 +86,8 @@ input
     user-select none
     float none
     -webkit-appearance none
+    -moz-appearance none
+    appearance none
     width 100%
     height 7px
     margin-top 10px
@@ -114,6 +116,15 @@ input
       height 26px
       width 26px
       border-radius 13px
+
+    &::-ms-thumb
+      height 26px
+      width 26px
+      border-radius 13px
+
+    &::-ms-tooltip
+      background-color blue !important
+
 
 select
   width 100%
@@ -224,6 +235,21 @@ body:not([data-os=firefoxos]) label.select
   & > select
     border-radius 0
     margin 0
+
+body[data-browser="ie"], body[data-os="wp"]
+  & input[type="range"]
+    border none
+    padding 10px 0
+    margin 0
+    background-color transparent
+
+  label.select
+    &:before
+      top 2px
+      right 8px
+
+    &:after
+      top 3px
 
 textarea
   line-height 1.2em
