Added wp fallback and visualizations

--- a/stylesheets/Tako.navigator.styl
+++ b/stylesheets/Tako.navigator.styl
@@ -1,7 +1,7 @@
 body[data-os=android]
-  & [data-os=ios], & [data-os=firefoxos]
+  & [data-os=ios], & [data-os=firefoxos], & [data-os=wp]
     display none
-  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox]
+  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox], & [data-browser=ie]
     display none
 
 
@@ -11,31 +11,43 @@ body[data-version="2.3"]
       -webkit-user-modify read-write-plaintext-only
 
 body[data-os=ios]
-  & [data-os=android], & [data-os=firefoxos]
+  & [data-os=android], & [data-os=firefoxos], & [data-os=wp]
     display none
-  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox]
+  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox], & [data-browser=ie]
+    display none
+
+body[data-os=wp]
+  & [data-os=android], & [data-os=firefoxos], & [data-os=ios]
+    display none
+  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox], & [data-browser=ie]
     display none
 
 body[data-os=firefoxos]
-  & [data-os=android], & [data-os=ios]
+  & [data-os=android], & [data-os=ios], & [data-os=wp]
     display none
-  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox]
+  & [data-browser=chrome], & [data-browser=safari], & [data-browser=firefox], & [data-browser=ie]
     display none
 
 body[data-browser=chrome]
-  & [data-os=android], & [data-os=ios], & [data-os=firefoxos]
+  & [data-os=android], & [data-os=ios], & [data-os=firefoxos], & [data-os=wp]
     display none
-  & [data-browser=safari], & [data-browser=firefox]
+  & [data-browser=safari], & [data-browser=firefox], & [data-browser=ie]
     display none
 
 body[data-browser=safari]
-  & [data-os=android], & [data-os=ios], & [data-os=firefoxos]
+  & [data-os=android], & [data-os=ios], & [data-os=firefoxos], & [data-os=wp]
     display none
-  & [data-browser=chrome], & [data-browser=firefox]
+  & [data-browser=chrome], & [data-browser=firefox], & [data-browser=ie]
     display none
 
 body[data-browser=firefox]
-  & [data-os=android], & [data-os=ios], & [data-os=firefoxos]
+  & [data-os=android], & [data-os=ios], & [data-os=firefoxos], & [data-os=wp]
     display none
-  & [data-browser=safari], & [data-browser=chrome]
+  & [data-browser=safari], & [data-browser=chrome], & [data-browser=ie]
+    display none
+
+body[data-browser=ie]
+  & [data-os=android], & [data-os=ios], & [data-os=firefoxos], & [data-os=wp]
+    display none
+  & [data-browser=safari], & [data-browser=chrome], & [data-browser=firefox]
     display none
